added player select feature

--- a/index.html
+++ b/index.html
@@ -34,7 +34,17 @@
             </div>
         </div>
     <canvas id="game"></canvas>
-
+    <div id="playerselect">
+        <div id="daffyduck" class="player">
+            <img src="assets/player_daffyduck.png">
+        </div>
+        <div id="kreativekermit" class="player">
+            <img src="assets/player_kreativekermit.png">
+        </div>
+        <div id="precisepingu" class="player">
+            <img src="assets/player_precisepingu.png">
+        </div>
+    </div>
     </div>
     <script src="game.js"></script>
 </body>
